chatinput is no longer accessible if session is not active. tweaked z-index fighting.

--- a/client/src/components/ConfirmActionModal/ConfirmActionModal.scss
+++ b/client/src/components/ConfirmActionModal/ConfirmActionModal.scss
@@ -33,7 +33,10 @@
         max-height: 80vh;
         left: 25vw;
       }
-      &_button{
+      &__title{
+        background-color: none;
+      }
+      &__button{
         background-color: none;
       }
     }
