--- a/client/src/pages/HomePage/HomePage.scss
+++ b/client/src/pages/HomePage/HomePage.scss
@@ -12,7 +12,7 @@
   &__selectionBar {
     max-width: 100%;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
   }
 
   &__side {
